overflow: auto to ensure scrollbar showing only when needed

--- a/src/gwt/src/org/rstudio/studio/client/workbench/views/source/DocumentOutlineWidget.css
+++ b/src/gwt/src/org/rstudio/studio/client/workbench/views/source/DocumentOutlineWidget.css
@@ -10,7 +10,7 @@
 
 .tree {
 	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow-y: auto;
 	padding-top: 3px;
 	padding-bottom: 3px;
 }
